--- a/public/style/style.css
+++ b/public/style/style.css
@@ -20,6 +20,26 @@ body {
 }
 
 
+.loading {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+    color: white;
+    display: grid;
+    place-items: center;
+}
+
+.loading p {
+    font-size: 4em;
+}
+
+.hidden {
+    display: none;
+}
 
 
 circle {
@@ -27,7 +47,6 @@ circle {
 }
 
 form {
-
     color: white;
     display: flex;
     margin: auto;
