--- a/public/style/style.css
+++ b/public/style/style.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: #008BC3;
 }
 
 #svg-container {
@@ -27,7 +27,7 @@ body {
     z-index: 20;
     height: 100vh;
     width: 100vw;
-    background-color: black;
+    background-color: #008BC3;
     color: white;
     display: grid;
     place-items: center;
@@ -85,12 +85,8 @@ form select {
     stroke: rgb(71, 71, 71)
 }
 
-rect {
-    fill: lightblue;
-}
-
 h1 {
-    color: orangered;
+    color: white;
 }
 
 /* circle:hover {
@@ -99,12 +95,12 @@ h1 {
 
 /* title */
 svg>g>text {
-    fill: orangered;
+    fill: white;
     font-size: 2em;
 }
 
 .axis-label {
-    fill: orangered;
+    fill: white;
     font-size: 1.6em;
     text-transform: uppercase;
 }
@@ -117,10 +113,10 @@ text {
 }
 
 svg>text {
-    fill: orangered;
+    fill: white;
     text-shadow:
-        -1px -1px 0 #fff,
-        1px -1px 0 #fff,
-        -1px 1px 0 #fff,
-        1px 1px 0 #fff;
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;
 }
