--- a/public/style/style.css
+++ b/public/style/style.css
@@ -120,3 +120,11 @@ svg>text {
         -1px 1px 0 #000,
         1px 1px 0 #000;
 }
+
+svg>text:first-of-type {
+    fill: bisque;
+}
+
+svg>text:nth-of-type(1n+2) {
+    font-size: 0.9em;
+}
